@@ -52,12 +52,10 @@ importFrom(BatchJobs,batchMap)
 importFrom(BatchJobs,getErrorMessages)
 importFrom(BatchJobs,getStatus)
 importFrom(BatchJobs,loadResult)
-importFrom(BatchJobs,makeClusterFunctions)
 importFrom(BatchJobs,makeClusterFunctionsInteractive)
 importFrom(BatchJobs,makeClusterFunctionsLocal)
 importFrom(BatchJobs,makeClusterFunctionsMulticore)
 importFrom(BatchJobs,makeRegistry)
-importFrom(BatchJobs,makeSubmitJobResult)
 importFrom(BatchJobs,removeRegistry)
 importFrom(BatchJobs,submitJobs)
 importFrom(R.methodsS3,throw)
