@@ -72,7 +72,7 @@
 backend <- local({
   aliases = list(
     default = c(".BatchJobs.R", "multicore-1", "multicore",
-                "local", "interactive") ## , "rscript")
+                "local", "interactive")
   )
   last = NULL
 
@@ -153,7 +153,7 @@ backend <- local({
     what <- what[1L]
 
     if (debug) mprintf("backend(): what='%s'\n", what)
-    
+
     ## Inform about dropped requests?
     if (length(dropped) > 0L && explicit_what && getOption("async::on_unkown_backend", "ignore") == "warn") {
       warning(sprintf("Some of the preferred backends (%s) are either not available or not supported on your operating system ('%s'). Will use the following backend: %s", paste(sQuote(dropped), collapse=", "), .Platform$OS, sQuote(what)))
@@ -213,8 +213,6 @@ backend <- local({
       conf$cluster.functions = makeClusterFunctionsLocal()
     } else if (what == "interactive") {
       conf$cluster.functions = makeClusterFunctionsInteractive()
-    } else if (what == "rscript") {
-      conf$cluster.functions = makeClusterFunctionsRscript()
     } else {
       stop("Unknown backend: ", sQuote(what))
     }
