@@ -1,9 +1,0 @@
-source("incl/start.R")
-
-message("*** makeClusterFunctionsRscript() ...")
-
-print(makeClusterFunctionsRscript())
-
-message("*** makeClusterFunctionsRscript() ... DONE")
-
-source("incl/end.R")
